--- a/css/variables.css
+++ b/css/variables.css
@@ -1,6 +1,10 @@
 :root {
   --blue-500: #0d6efd;
   --gray-500: #8b96a5;
-  --primary-text-clr: var(--gray-500);
+  --dark-500: #1c1c1c;
+  --white-500: #e0e0e0;
+  --primary-text-color: var(--dark-500);
   --primary-btn-bg: var(--blue-500);
+  --secondary-text-clr: var(--gray-500);
+  --primary-line-clr: var(--white-500);
 }
