--- a/css/variables.css
+++ b/css/variables.css
@@ -3,8 +3,10 @@
   --gray-500: #8b96a5;
   --dark-500: #1c1c1c;
   --white-500: #e0e0e0;
+  --gray-400: #dee2e7;
   --primary-text-color: var(--dark-500);
   --primary-btn-bg: var(--blue-500);
   --secondary-text-clr: var(--gray-500);
   --primary-line-clr: var(--white-500);
+  --primary-full-background-clr: var(--gray-400);
 }
