add services ,supplier and newslatter

--- a/css/variables.css
+++ b/css/variables.css
@@ -4,6 +4,7 @@
   --dark-500: #1c1c1c;
   --white-500: #e0e0e0;
   --gray-400: #dee2e7;
+  --bg-light:#f7f7fa;
   --primary-text-color: var(--dark-500);
   --primary-btn-bg: var(--blue-500);
   --secondary-text-clr: var(--gray-500);
