--- a/components/header.html
+++ b/components/header.html
@@ -1,7 +1,8 @@
  <header>
     <div class="container">
       <div class="logo">
-        <img src="\assets\Layout\Brand\logo-colored.png" alt="logo">
+        <a href="/index.html"><img src="\assets\Layout\Brand\logo-colored.png" alt="logo"></a>
+        
       </div>
       <form action="">
         <div class="search-bar">
