--- a/css/cart.css
+++ b/css/cart.css
@@ -7,8 +7,8 @@
   padding: 30px 0;
 }
 
-.cart-section .container {
-  max-width: 1200px;
+.cart-section .cart-container {
+  max-width: 1180px;
   margin: 0 auto;
   padding: 0 20px;
 }
