add some icons like socail link in footer and enhanced main.js to implement a save for later feature and render saved items in the cart.

--- a/components/footer.html
+++ b/components/footer.html
@@ -2,15 +2,15 @@
     <div class="footer-top-section">
         <div class="footer-brand-info">
             <a href="/" class="brand-logo">
-                <img src="assets/Layout/Brand/logo-colored.png" alt="Brand Logo">
+                <img src="/assets/Layout/Brand/logo-colored.png" alt="Brand Logo">
             </a>
             <p>Best information about the company goes here but now lorem ipsum is</p>
             <ul class="social-links">
-                <li><a href="#" aria-label="Facebook"><img src="" alt="" width="30px"></a></li>
-                <li><a href="#" aria-label="Twitter"><img src="" alt="" width="30px"></a></li>
-                <li><a href="#" aria-label="LinkedIn"><img src="" alt="" width="30px"></a></li>
-                <li><a href="#" aria-label="Instagram"><img src="" alt="" width="30px"></a></li>
-                <li><a href="#" aria-label="YouTube"><img src="" alt="" width="30px"></a></li>  
+                <li><a href="#" aria-label="Facebook"><img src="/assets/icons/SVG/contact/facebook.svg" alt="" width="30px"></a></li>
+                <li><a href="#" aria-label="Twitter"><img src="/assets/icons/SVG/contact/x.svg" alt="" width="30px"></a></li>
+                <li><a href="#" aria-label="LinkedIn"><img src="/assets/icons/SVG/contact/linkedin.svg" alt="" width="30px"></a></li>
+                <li><a href="#" aria-label="Instagram"><img src="/assets/icons/SVG/contact/insta.svg" alt="" width="30px"></a></li>
+                <li><a href="#" aria-label="YouTube"><img src="/assets/icons/SVG/contact/yt.svg" alt="" width="30px"></a></li>  
             </ul>
         </div>
 
