--- a/components/subNavBar.html
+++ b/components/subNavBar.html
@@ -4,7 +4,7 @@
         <ul class="sub-nav-links left-nav normal-text">
             <li>
                 <a href="#" class="category-trigger">
-                    <img src="assets/icons/hamburger.png" alt="manu icon" width="20px">
+                    <img src="/assets/icons/hamburger.png" alt="manu icon" width="20px">
                     <span>All category</span>
                 </a>
             </li>
