--- a/components/header.html
+++ b/components/header.html
@@ -37,7 +37,7 @@
           </li>
           <li>
             <a href="/pages/cart.html">
-              <img src="/assets/icons/cart.png" alt="cart icon">
+              <img src="/assets/icons/cart.png" alt="cart icon" class="fa-fade">
             </a>
             <span>My Cart</span>
           </li>
