--- a/css/utility.css
+++ b/css/utility.css
@@ -3,7 +3,7 @@
   font-size: 16px;
   line-height: 22px;
 }
-style-none {
+.style-none {
   list-style: none;
 }
 .flex {
@@ -15,6 +15,13 @@ a {
   text-decoration: none;
   color: var(--primary-text-color);
 }
-.opacity{
+.opacity {
   opacity: 0.4;
+}
+.display-none {
+  display: none;
+}
+.filter-list.display-block {
+  max-height: 500px;
+  opacity: 1;
 }
