--- a/css/productListing.css
+++ b/css/productListing.css
@@ -17,6 +17,7 @@
   padding: 0;
   margin: 0;
   align-items: center;
+  gap: 8px;
 }
 
 .breadcrumb-list li {
@@ -26,13 +27,6 @@
   color: var(--secondary-text-clr);
 }
 
-.breadcrumb-list li:not(:last-child)::after {
-  content: ">";
-  font-weight: 900;
-  margin: 0 10px;
-  font-size: 12px;
-  color: var(--secondary-text-clr);
-}
 .breadcrumb-list a {
   text-decoration: none;
   color: var(--secondary-text-clr);
@@ -384,6 +378,8 @@
   text-decoration: none;
   font-weight: 500;
   font-size: 14px;
+  display: block !important;
+  order: 9;
 }
 /* pagenation section */
 .pagination-wrapper {
