--- a/css/styles.css
+++ b/css/styles.css
@@ -156,9 +156,12 @@ header {
   padding: 6px;
   width: 230px;
   height: 40px;
-  background-color: #e5f1ff;
   border-radius: 5px;
   text-align: start;
+}
+.hero-container nav li:hover {
+  background-color: #e5f1ff;
+  cursor: pointer;
 }
 .main-banner {
   width: 665px;
@@ -509,14 +512,32 @@ textarea::placeholder {
   border-radius: 6px;
   position: relative;
 }
-.extra-service-item .bg-image-section {
-  width: 100%;
-  height: 120px;
+.extra-service-items .extra-service-item {
+  width: 280px;
+  height: 200px;
   border-radius: 5px;
+}
+#extra-service-1 {
   background-image: url("/assets/Image/backgrounds/Mask\ group.png");
+}
+#extra-service-2 {
+  background-image: url("/assets/Image/backgrounds/Mask\ group\ \(1\).png");
+}
+#extra-service-3 {
+  background-image: url("/assets/Image/backgrounds/image\ 106.png");
+}
+#extra-service-4 {
+  background-image: url("/assets/Image/backgrounds/image\ 107.png");
+}
+.extra-service-item .bg-image-section {
+  border-radius: 5px;
+  height: 120px;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 .extra-service-item > p {
   padding: 10px 20px;
+  width: 175px;
 }
 .extra-service-item > .icon {
   display: flex;
